2006-09-20  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/isakmp_agg.c: Remove dead code (Coverity)
	* src/racoon/isakmp_cfg.c: Fix memory leak (Coverity)
	* src/racoon/samples/roadwarrior/client/{phase1-up.sh|phase1-down.sh}:
	  update the scripts for wrorking around routing problems on NetBSD
	* src/racoon/admin.c: Do not free id and key, as they are used later
	* src/racoon/session.c: Reuse existing code for closing IKE sockets,
	  and avoid screwing things by setting p->sock = -1, which is not
	  expected (Coverity).

2006-09-29  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/racoonctl.c: Fix the previous fix

2006-09-28  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/racoonctl.c: Fix access after free (Coverity)
	* src/racoon/isakmp_xauth.c: Fix unchecked mallocs (Coverity)

2006-09-26  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/admin.c: Fix memory leaks in racoonctl (Coverity)
	* src/racoon/admin.c: Remove dead code (Coverity)
	* src/racoon/backupsa.c: Fix memory leak (Coverity)
	* src/racoon/cfparse.y: Fix memory leak (Coverity)

	From Jeff Bailey:
	* src/racoon/{pfkey.c|proposal.c}: fix SA bundle (e.g.: ESP+IPcomp)

	From Matthew Grooms:
	* src/racoon/ipsec_doi.c: fix buffer overflow

2006-09-25  Yvan Vanhullebus  <vanhu@NetBSD.org>
	Reported by Yves-Alexis Perez:
	* src/racoon/isakmp.c: struct ip -> struct iphdr for Linux.

2006-09-15  Emmanuel Dreyfus  <manu@netbsd.org>
	From Matthew Grooms:
	* src/racoon/ipsec_doi.c: fix double free

2006-09-21  Yvan Vanhullebus  <vanhu@NetBSD.org>
	Reported by Yves-Alexis Perez:
	* src/libipsec/pfkey.c: use sysdep_sa_len to make it compile on
	  Linux.

2006-09-19  Yvan Vanhullebus  <vanhu@NetBSD.org>
	* src/racoon/isakmp.c: always include some headers, as they are
	  required even without NAT-T.
	From Larry Baird:
	* src/libipsec/pfkey_dump.c, src/setkey/token.l: define
	  SADB_X_EALG_AESCBC as SADB_X_EALG_AES if needed.
	* src/racoon/crypto_openssl.c: some printf() -> plog().
	From Yves-Alexis Perez: